--- a/comentarios.css
+++ b/comentarios.css
@@ -5,6 +5,13 @@
 body{
     background-color: #DDF2FD;
 }
+/*
+comentarios
+*/
+#cont-all{
+    display: flex;
+    flex-direction: row;
+}
 .comentario{
     background-color: #164863;
     width: 40vw;
@@ -26,14 +33,40 @@ body{
     justify-content: end;
     margin-right: 1vw;
 }
+/*
+Poner tu comentario
+*/
 #my-comment{
     background-color: #164863;
     display: flex;
     flex-direction: column;
+    margin: 10vw 0 0 5vw;
+    width:50vw;
+    border-radius: 1vw;
 }
 .star{
     background-color: transparent;
     border: none;
     color: #DDF2FD;
     font-size: xx-large;
+}
+.cont-info{
+    display: flex;
+    flex-direction: row;
+}
+.cont-info input{
+    margin: 2vw;
+    width: 15vw;
+    height: 2vw;
+    border: none;
+    padding: 0.5vw 0 0.5vw 0.5vw;
+}
+#coment{
+    margin: 2vw 0 0 2vw;
+    border: none;
+    width: 47vw;
+    padding: 1vw 0 10vw 1vw;
+}
+#start-content{
+    margin-left: 2vw;
 }
